--- a/ChatGPT_Prompting_Dev/I2_guideline.ipynb
+++ b/ChatGPT_Prompting_Dev/I2_guideline.ipynb
@@ -33,10 +33,11 @@
     "import openai\n",
     "import os\n",
     "\n",
-    "# from dotenv import load_dotenv, find_dotenv\n",
-    "# _ = load_dotenv(find_dotenv())\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "_ = load_dotenv(find_dotenv())\n",
     "\n",
-    "# openai.api_key  = os.getenv('OPENAI_API_KEY')\n"
+    "# openai.api_key  = os.getenv('OPENAI_API_KEY')\n",
+    "openai.api_key = \"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\"\n"
    ]
   },
   {
