--- a/LinkedIn_Learning_Full_Stack_DL_Python/demo_03_ModelDeployment.ipynb
+++ b/LinkedIn_Learning_Full_Stack_DL_Python/demo_03_ModelDeployment.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2583231e",
    "metadata": {},
    "outputs": [],
@@ -132,19 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2bed9f72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "emnist_test_data = pd.read_csv(\"emnist-letters-test.csv\")\n",
+    "DATA_PATH = \"/Users/tawate/Documents/DeepLearning_AI_Courses/LinkedIn_Learning_Full_Stack_DL_Python/datasets/\"\n",
+    "emnist_test_data = pd.read_csv(DATA_PATH + \"emnist-letters-test.csv\")\n",
     "\n",
     "emnist_test_data = emnist_test_data.sample(frac = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e5ac1b76",
    "metadata": {},
    "outputs": [],
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "6e305649",
    "metadata": {},
    "outputs": [],
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "cb4ae4be",
    "metadata": {},
    "outputs": [
@@ -193,7 +194,7 @@
        "(torch.Size([64, 784]), torch.Size([64]))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,32 +217,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "730195ee",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/12/09 09:45:07 WARNING mlflow.pyfunc: Encountered an unexpected error (AttributeError(\"module 'pathlib' has no attribute '__version__'\")) while detecting model dependency mismatches. Set logging level to DEBUG to see the full traceback.\n"
+     "ename": "MlflowException",
+     "evalue": "Could not find an \"MLmodel\" configuration file at \"/Users/tawate/Documents/DeepLearning_AI_Courses/mlartifacts/0/models/m-e852ac876f3b4df98f53f73064a89b25/MLmodel\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mMlflowException\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m logged_model = \u001b[33m'\u001b[39m\u001b[33m/Users/tawate/Documents/DeepLearning_AI_Courses/mlartifacts/0/models/m-e852ac876f3b4df98f53f73064a89b25\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Load model as a PyFuncModel.\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m loaded_model = \u001b[43mmlflow\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpyfunc\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlogged_model\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m predictions = loaded_model.predict(test_imgs.numpy().reshape(-\u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m28\u001b[39m, \u001b[32m28\u001b[39m))\n\u001b[32m     10\u001b[39m predictions.shape\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/DeepLearning_AI_Courses/.venv/lib/python3.13/site-packages/mlflow/tracing/provider.py:435\u001b[39m, in \u001b[36mtrace_disabled.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    433\u001b[39m disable()\n\u001b[32m    434\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m435\u001b[39m     is_func_called, result = \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    436\u001b[39m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m    437\u001b[39m     enable()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/DeepLearning_AI_Courses/.venv/lib/python3.13/site-packages/mlflow/pyfunc/__init__.py:1135\u001b[39m, in \u001b[36mload_model\u001b[39m\u001b[34m(model_uri, suppress_warnings, dst_path, model_config)\u001b[39m\n\u001b[32m   1132\u001b[39m     model_requirements = _get_pip_requirements_from_model_path(local_path)\n\u001b[32m   1133\u001b[39m     warn_dependency_requirement_mismatches(model_requirements)\n\u001b[32m-> \u001b[39m\u001b[32m1135\u001b[39m model_meta = \u001b[43mModel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m.\u001b[49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlocal_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mMLMODEL_FILE_NAME\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1137\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m model_meta.metadata \u001b[38;5;129;01mand\u001b[39;00m model_meta.metadata.get(MLFLOW_MODEL_IS_EXTERNAL, \u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m   1138\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m MlflowException(\n\u001b[32m   1139\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mThis model\u001b[39m\u001b[33m'\u001b[39m\u001b[33ms artifacts are external and are not stored in the model directory.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1140\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m This model cannot be loaded with MLflow.\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   1141\u001b[39m         BAD_REQUEST,\n\u001b[32m   1142\u001b[39m     )\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/DeepLearning_AI_Courses/.venv/lib/python3.13/site-packages/mlflow/models/model.py:801\u001b[39m, in \u001b[36mModel.load\u001b[39m\u001b[34m(cls, path)\u001b[39m\n\u001b[32m    799\u001b[39m path_scheme = urlparse(path).scheme\n\u001b[32m    800\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;129;01mnot\u001b[39;00m path_scheme \u001b[38;5;129;01mor\u001b[39;00m path_scheme == \u001b[33m\"\u001b[39m\u001b[33mfile\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os.path.exists(path):\n\u001b[32m--> \u001b[39m\u001b[32m801\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m MlflowException(\n\u001b[32m    802\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mCould not find an \u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mMLMODEL_FILE_NAME\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\u001b[33m configuration file at \u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    803\u001b[39m         RESOURCE_DOES_NOT_EXIST,\n\u001b[32m    804\u001b[39m     )\n\u001b[32m    806\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m ModelsArtifactRepository._is_logged_model_uri(path):\n\u001b[32m    807\u001b[39m     path = ModelsArtifactRepository.get_underlying_uri(path)\n",
+      "\u001b[31mMlflowException\u001b[39m: Could not find an \"MLmodel\" configuration file at \"/Users/tawate/Documents/DeepLearning_AI_Courses/mlartifacts/0/models/m-e852ac876f3b4df98f53f73064a89b25/MLmodel\""
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(64, 26)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import mlflow\n",
     "\n",
-    "logged_model = 'mlruns/best_model'\n",
+    "logged_model = '/Users/tawate/Documents/DeepLearning_AI_Courses/mlartifacts/0/models/m-e852ac876f3b4df98f53f73064a89b25'\n",
     "\n",
     "# Load model as a PyFuncModel.\n",
     "loaded_model = mlflow.pyfunc.load_model(logged_model)\n",
@@ -587,9 +585,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fsdl_venv",
+   "display_name": ".venv",
    "language": "python",
-   "name": "fsdl_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -601,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
